Added SMSC students to Who

--- a/_includes/dc/who.html
+++ b/_includes/dc/who.html
@@ -1,6 +1,7 @@
 <p id="who">
   <strong>Who:</strong>
-  The workshop is for Smithsonian badge holders at any SI Unit working with research and collections data.
+  The workshop is for Smithsonian badge holders at any SI Unit working with research and collections data. 
+	It is also open to Smithsonian-Mason School of Conservation (SMSC) students.
 </p>
 <p align="center">
   <strong>
